--- a/Index.html
+++ b/Index.html
@@ -40,7 +40,6 @@
           <li class="nav-item"><a class="nav-link" href="#details">¿D&oacute;nde y Cu&aacute;ndo?</a></li>
           <li class="nav-item"><a class="nav-link" href="#guests">Te invitamos</a></li>
           <li class="nav-item"><a class="nav-link" href="#confirmation">Confirma tu asistencia</a></li>
-          <li class="nav-item"><a class="nav-link" href="#gifts">Regalos</a></li>
         </ul>
       </div>
     </div>
@@ -101,8 +100,6 @@
     </div>
   </section>
   
-
-
   <!-- Sección Cuenta Regresiva -->
   <section class="section countdown" id="countdown">
 
@@ -189,16 +186,11 @@
     </div>
   </section>
 
-
-
-
   <!-- Sección Número de Invitados -->
   <section class="section guests" id="guests">
     <h2 class="section-title">Te invitamos</h2>
     <p class="section-text">
-      Estamos encantados de que seas parte de este día especial. Para asegurarnos de que todos nuestros invitados se
-      sientan cómodos, hemos reservado <b><span id="allowed-guests"> 1
-        </span></b>asiento en su honor. ¡Gracias por tu comprensión!
+      Nos llena de alegría contar contigo en este día tan especial. Para mantener el ambiente íntimo y especial, hemos reservado un <b><span id="allowed-guests">1</span></b> asiento (adulto) exclusivamente para ti. Te agradecemos de corazón por tu comprensión y apoyo.
     </p>
   </section>
 
@@ -238,17 +230,6 @@
       </div>
     </form>
   </section>
-  
-
-  <!-- Sección Regalos -->
-  <section class="section gifts" id="gifts">
-    <h2 class="section-title">Regalos</h2>
-    <p class="section-text">
-      Su presencia y buenos deseos son suficientes para nosotros, en caso de que deseen hacernos un obsequio, aquí te
-      dejamos nuestro número de cuenta. ¡Gracias por tu generosidad!
-    </p>
-    <b class="account-number">Número de cuenta: <br> BBVA <br> 4815163052314526 <br> Hugo Andres Mendez Guerra</b>
-  </section>
 
   <!-- Botón para controlar la música -->
   <buttonclaz id="music-button">
@@ -264,8 +245,6 @@
       <source src="audioboda.mp3" type="audio/mpeg">
       Tu navegador no soporta el elemento de audio.
     </audio> 
-
-
 
     <script src="index.js"></script>
 </body>
