Fix wording for guest seating message in invitation HTML

--- a/invitacion1-v-m1.html
+++ b/invitacion1-v-m1.html
@@ -190,7 +190,7 @@
   <section class="section guests" id="guests">
     <h2 class="section-title">Te invitamos</h2>
     <p class="section-text">
-      Nos llena de alegría contar contigo en este día tan especial. Para mantener el ambiente íntimo y especial, hemos reservado un <b><span id="allowed-guests">1</span></b> asiento (adulto) exclusivamente para ti. Te agradecemos de corazón por tu comprensión y apoyo.
+      Nos llena de alegría contar contigo en este día tan especial. Para mantener el ambiente íntimo y especial, hemos reservado <b><span id="allowed-guests">1</span></b> asiento (adulto) exclusivamente para ti. Te agradecemos de corazón por tu comprensión y apoyo.
     </p>
   </section>
 
